syntax = "proto3";
package mun.claim.v1beta1;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "mun/x/claim/types";

enum Action {
  option (gogoproto.goproto_enum_prefix) = false;

  ActionInitialClaim = 0;
  ActionDelegateStake = 1;
  ActionVote = 2;
  ActionSwap = 3;
}

message ClaimRecord {
  // address of claim user
  string address = 1 [ (gogoproto.moretags) = "yaml:\"address\"" ];

  // total initial claimable amount for the user
  repeated cosmos.base.v1beta1.Coin initial_claimable_amount = 2 [
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"initial_claimable_amount\""
  ];

  // true if action is completed
  // index of bool in array refers to action enum #
  repeated bool action_completed = 3 [
    (gogoproto.moretags) = "yaml:\"action_completed\"",
    (gogoproto.nullable) = false
  ];

  // true if action is ready to claim
  // index of bool in array refers to action enum #
  repeated bool action_ready = 4 [
    (gogoproto.moretags) = "yaml:\"action_ready\"",
    (gogoproto.nullable) = false
  ];

}
